# minecraft-cookies-checker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/minecookiechecker/: __init__.py  cli.py  config.py  consent.py  database.py  models.py  output.py  parser.py  validator.py
src/minecookiechecker/web/: app.py
src/minecookiechecker/web/templates/: index.html
tests/: test_cli.py  test_consent.py  test_database.py  test_models.py  test_output.py  test_parser.py  test_validator.py
tests/fixtures/: consent.txt  cookies.txt
